--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,9 +12,15 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ScoreActivity"
+            android:label="Score" >
+            <meta-data android:name="android.support.PARENT_ACTIVITY"
+                android:value=".GameActivity"
+                />
         </activity>
     </application>
 
