--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="se.nielstrom.greed" >
+    
+    <uses-sdk android:minSdkVersion="2"
+          android:targetSdkVersion="19" />
 
     <application
         android:allowBackup="true"
