--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    android:versionCode="1"
+    android:versionName="handin2"
     package="se.nielstrom.greed" >
     
     <uses-sdk android:minSdkVersion="3"
